@@ -23,7 +23,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import javax.ws.rs.BadRequestException;
 import lombok.extern.slf4j.Slf4j;
@@ -40,7 +39,6 @@ import org.openmetadata.schema.type.Function;
 import org.openmetadata.schema.type.ParamAdditionalContext;
 import org.openmetadata.schema.type.SubscriptionFilterOperation;
 import org.openmetadata.service.Entity;
-import org.openmetadata.service.elasticsearch.ElasticSearchIndexDefinition;
 import org.openmetadata.service.events.subscription.email.EmailPublisher;
 import org.openmetadata.service.events.subscription.gchat.GChatPublisher;
 import org.openmetadata.service.events.subscription.generic.GenericPublisher;
@@ -49,7 +47,7 @@ import org.openmetadata.service.events.subscription.slack.SlackEventPublisher;
 import org.openmetadata.service.exception.CatalogExceptionMessage;
 import org.openmetadata.service.jdbi3.CollectionDAO;
 import org.openmetadata.service.resources.CollectionRegistry;
-import org.openmetadata.service.search.IndexUtil;
+import org.openmetadata.service.search.models.IndexMapping;
 import org.springframework.expression.Expression;
 import org.springframework.expression.spel.support.StandardEvaluationContext;
 
@@ -133,17 +131,16 @@ public final class AlertUtil {
           func.setParamAdditionalContext(paramAdditionalContext.withData(getEntitiesIndex(Entity.getEntityList())));
           break;
         case matchAnyEventType:
-          List<String> eventTypes = Stream.of(EventType.values()).map(EventType::value).collect(Collectors.toList());
+          List<String> eventTypes = Stream.of(EventType.values()).map(EventType::value).toList();
           func.setParamAdditionalContext(paramAdditionalContext.withData(new HashSet<>(eventTypes)));
           break;
         case matchIngestionPipelineState:
           List<String> ingestionPipelineState =
-              Stream.of(PipelineStatusType.values()).map(PipelineStatusType::value).collect(Collectors.toList());
+              Stream.of(PipelineStatusType.values()).map(PipelineStatusType::value).toList();
           func.setParamAdditionalContext(paramAdditionalContext.withData(new HashSet<>(ingestionPipelineState)));
           break;
         case matchTestResult:
-          List<String> testResultStatus =
-              Stream.of(TestCaseStatus.values()).map(TestCaseStatus::value).collect(Collectors.toList());
+          List<String> testResultStatus = Stream.of(TestCaseStatus.values()).map(TestCaseStatus::value).toList();
           func.setParamAdditionalContext(paramAdditionalContext.withData(new HashSet<>(testResultStatus)));
           break;
         default:
@@ -158,8 +155,8 @@ public final class AlertUtil {
     Set<String> indexesToSearch = new HashSet<>();
     for (String entityType : entities) {
       try {
-        ElasticSearchIndexDefinition.ElasticSearchIndexType type = IndexUtil.getIndexMappingByEntityType(entityType);
-        indexesToSearch.add(type.indexName);
+        IndexMapping indexMapping = Entity.getSearchRepository().getIndexMapping(entityType);
+        indexesToSearch.add(indexMapping.getIndexName());
       } catch (RuntimeException ex) {
         LOG.error("Failing to get Index for EntityType");
       }
