@@ -26,7 +26,6 @@ import static org.openmetadata.schema.api.teams.CreateTeam.TeamType.ORGANIZATION
 import static org.openmetadata.schema.type.Include.ALL;
 import static org.openmetadata.service.Entity.ADMIN_USER_NAME;
 import static org.openmetadata.service.Entity.FIELD_DOMAIN;
-import static org.openmetadata.service.Entity.FIELD_OWNER;
 import static org.openmetadata.service.Entity.ORGANIZATION_NAME;
 import static org.openmetadata.service.Entity.POLICY;
 import static org.openmetadata.service.Entity.ROLE;
@@ -41,7 +40,6 @@ import static org.openmetadata.service.exception.CatalogExceptionMessage.invalid
 import static org.openmetadata.service.exception.CatalogExceptionMessage.invalidParent;
 import static org.openmetadata.service.exception.CatalogExceptionMessage.invalidParentCount;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -52,7 +50,6 @@ import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
-import javax.ws.rs.core.UriInfo;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.csv.CSVPrinter;
 import org.apache.commons.csv.CSVRecord;
@@ -68,12 +65,11 @@ import org.openmetadata.schema.type.csv.CsvDocumentation;
 import org.openmetadata.schema.type.csv.CsvErrorType;
 import org.openmetadata.schema.type.csv.CsvHeader;
 import org.openmetadata.schema.type.csv.CsvImportResult;
-import org.openmetadata.schema.utils.EntityInterfaceUtil;
 import org.openmetadata.service.Entity;
 import org.openmetadata.service.exception.EntityNotFoundException;
 import org.openmetadata.service.jdbi3.CollectionDAO.EntityRelationshipRecord;
 import org.openmetadata.service.resources.teams.TeamResource;
-import org.openmetadata.service.security.policyevaluator.SubjectCache;
+import org.openmetadata.service.security.policyevaluator.SubjectContext;
 import org.openmetadata.service.util.EntityUtil;
 import org.openmetadata.service.util.EntityUtil.Fields;
 import org.openmetadata.service.util.JsonUtils;
@@ -87,31 +83,42 @@ public class TeamRepository extends EntityRepository<Team> {
   private static final String DEFAULT_ROLES = "defaultRoles";
   private Team organization = null;
 
-  public TeamRepository(CollectionDAO dao) {
-    super(TeamResource.COLLECTION_PATH, TEAM, Team.class, dao.teamDAO(), dao, TEAM_PATCH_FIELDS, TEAM_UPDATE_FIELDS);
+  public TeamRepository() {
+    super(
+        TeamResource.COLLECTION_PATH,
+        TEAM,
+        Team.class,
+        Entity.getCollectionDAO().teamDAO(),
+        TEAM_PATCH_FIELDS,
+        TEAM_UPDATE_FIELDS);
+    this.quoteFqn = true;
+    supportsSearch = true;
   }
 
   @Override
-  public Team setFields(Team team, Fields fields) throws IOException {
-    if (!fields.contains("profile")) {
-      team.setProfile(null); // Clear the profile attribute, if it was not requested
-    }
-    team.setUsers(fields.contains("users") ? getUsers(team) : null);
-    team.setOwns(fields.contains("owns") ? getOwns(team) : null);
-    team.setDefaultRoles(fields.contains(DEFAULT_ROLES) ? getDefaultRoles(team) : null);
-    team.setInheritedRoles(fields.contains(DEFAULT_ROLES) ? getInheritedRoles(team) : null);
-    team.setOwner(fields.contains(FIELD_OWNER) ? getOwner(team) : null);
-    team.setParents(fields.contains(PARENTS_FIELD) ? getParents(team) : null);
-    team.setChildren(fields.contains("children") ? getChildren(team.getId()) : null);
-    team.setPolicies(fields.contains("policies") ? getPolicies(team) : null);
-    team.setChildrenCount(fields.contains("childrenCount") ? getChildrenCount(team) : null);
-    team.setUserCount(fields.contains("userCount") ? getUserCount(team.getId()) : null);
+  public Team setFields(Team team, Fields fields) {
+    team.setUsers(fields.contains("users") ? getUsers(team) : team.getUsers());
+    team.setOwns(fields.contains("owns") ? getOwns(team) : team.getOwns());
+    team.setDefaultRoles(fields.contains(DEFAULT_ROLES) ? getDefaultRoles(team) : team.getDefaultRoles());
+    team.setInheritedRoles(fields.contains(DEFAULT_ROLES) ? getInheritedRoles(team) : team.getInheritedRoles());
+    team.setParents(fields.contains(PARENTS_FIELD) ? getParents(team) : team.getParents());
+    team.setPolicies(fields.contains("policies") ? getPolicies(team) : team.getPolicies());
+    team.setChildrenCount(fields.contains("childrenCount") ? getChildrenCount(team) : team.getChildrenCount());
+    team.setUserCount(fields.contains("userCount") ? getUserCount(team.getId()) : team.getUserCount());
     return team;
   }
 
   @Override
-  public Team getByName(UriInfo uriInfo, String name, Fields fields) throws IOException {
-    return super.getByName(uriInfo, EntityInterfaceUtil.quoteName(name), fields);
+  public Team clearFields(Team team, Fields fields) {
+    team.setProfile(fields.contains("profile") ? team.getProfile() : null);
+    team.setUsers(fields.contains("users") ? team.getUsers() : null);
+    team.setOwns(fields.contains("owns") ? team.getOwns() : null);
+    team.setDefaultRoles(fields.contains(DEFAULT_ROLES) ? team.getDefaultRoles() : null);
+    team.setInheritedRoles(fields.contains(DEFAULT_ROLES) ? team.getInheritedRoles() : null);
+    team.setParents(fields.contains(PARENTS_FIELD) ? team.getParents() : null);
+    team.setPolicies(fields.contains("policies") ? team.getPolicies() : null);
+    team.setChildrenCount(fields.contains("childrenCount") ? team.getChildrenCount() : null);
+    return team.withUserCount(fields.contains("userCount") ? team.getUserCount() : null);
   }
 
   @Override
@@ -122,7 +129,7 @@ public class TeamRepository extends EntityRepository<Team> {
   }
 
   @Override
-  public void prepare(Team team) throws IOException {
+  public void prepare(Team team, boolean update) {
     populateParents(team); // Validate parents
     populateChildren(team); // Validate children
     validateUsers(team.getUsers());
@@ -131,28 +138,20 @@ public class TeamRepository extends EntityRepository<Team> {
   }
 
   @Override
-  public void storeEntity(Team team, boolean update) throws IOException {
+  public void storeEntity(Team team, boolean update) {
     // Relationships and fields such as href are derived and not stored as part of json
     List<EntityReference> users = team.getUsers();
     List<EntityReference> defaultRoles = team.getDefaultRoles();
     List<EntityReference> parents = team.getParents();
-    List<EntityReference> children = team.getChildren();
     List<EntityReference> policies = team.getPolicies();
 
     // Don't store users, defaultRoles, href as JSON. Build it on the fly based on relationships
-    team.withUsers(null).withDefaultRoles(null).withInheritedRoles(null);
+    team.withUsers(null).withDefaultRoles(null).withParents(null).withPolicies(null).withInheritedRoles(null);
 
     store(team, update);
-    if (update) {
-      SubjectCache.invalidateTeam(team.getId());
-    }
 
     // Restore the relationships
-    team.withUsers(users)
-        .withDefaultRoles(defaultRoles)
-        .withParents(parents)
-        .withChildren(children)
-        .withPolicies(policies);
+    team.withUsers(users).withDefaultRoles(defaultRoles).withParents(parents).withPolicies(policies);
   }
 
   @Override
@@ -178,7 +177,7 @@ public class TeamRepository extends EntityRepository<Team> {
   }
 
   @Override
-  public Team setInheritedFields(Team team, Fields fields) throws IOException {
+  public Team setInheritedFields(Team team, Fields fields) {
     // If user does not have domain, then inherit it from parent Team
     // TODO have default team when a user belongs to multiple teams
     if (fields.contains(FIELD_DOMAIN) && team.getDomain() == null) {
@@ -197,16 +196,15 @@ public class TeamRepository extends EntityRepository<Team> {
   }
 
   @Override
-  protected void preDelete(Team entity) {
+  protected void preDelete(Team entity, String deletedBy) {
     if (entity.getId().equals(organization.getId())) {
       throw new IllegalArgumentException(DELETE_ORGANIZATION);
     }
   }
 
   @Override
-  protected void cleanup(Team team) throws IOException {
-    // When a parent team is deleted, if the children team don't have a parent, set Organization as the parent
-    getParents(team);
+  protected void cleanup(Team team) {
+    // When a team is deleted, if the children team don't have another parent, set Organization as the parent
     for (EntityReference child : listOrEmpty(team.getChildren())) {
       Team childTeam = dao.findEntityById(child.getId());
       getParents(childTeam);
@@ -216,7 +214,6 @@ public class TeamRepository extends EntityRepository<Team> {
       }
     }
     super.cleanup(team);
-    SubjectCache.invalidateTeam(team.getId());
   }
 
   @Override
@@ -232,8 +229,8 @@ public class TeamRepository extends EntityRepository<Team> {
     return teamCsv.importCsv(csv, dryRun);
   }
 
-  private List<EntityReference> getInheritedRoles(Team team) throws IOException {
-    return SubjectCache.getRolesForTeams(getParentsForInheritedRoles(team));
+  private List<EntityReference> getInheritedRoles(Team team) {
+    return SubjectContext.getRolesForTeams(getParentsForInheritedRoles(team));
   }
 
   private TeamHierarchy getTeamHierarchy(Team team) {
@@ -291,7 +288,7 @@ public class TeamRepository extends EntityRepository<Team> {
     return team1;
   }
 
-  public List<TeamHierarchy> listHierarchy(ListFilter filter, int limit, Boolean isJoinable) throws IOException {
+  public List<TeamHierarchy> listHierarchy(ListFilter filter, int limit, Boolean isJoinable) {
     Fields fields = getFields(PARENTS_FIELD);
     Map<UUID, TeamHierarchy> map = new HashMap<>();
     ResultList<Team> resultList = listAfter(null, fields, filter, limit, null);
@@ -300,7 +297,7 @@ public class TeamRepository extends EntityRepository<Team> {
         allTeams.stream()
             .filter(Boolean.TRUE.equals(isJoinable) ? Team::getIsJoinable : t -> true)
             .filter(t -> !t.getName().equals(ORGANIZATION_NAME))
-            .collect(Collectors.toList());
+            .toList();
     // build hierarchy of joinable teams
     joinableTeams.forEach(
         team -> {
@@ -338,11 +335,11 @@ public class TeamRepository extends EntityRepository<Team> {
     return new ArrayList<>(map.values());
   }
 
-  private List<EntityReference> getUsers(Team team) throws IOException {
+  private List<EntityReference> getUsers(Team team) {
     return findTo(team.getId(), TEAM, Relationship.HAS, Entity.USER);
   }
 
-  private List<EntityRelationshipRecord> getUsersRelationshipRecords(UUID teamId) throws IOException {
+  private List<EntityRelationshipRecord> getUsersRelationshipRecords(UUID teamId) {
     List<EntityRelationshipRecord> userRecord = findToRecords(teamId, TEAM, Relationship.HAS, Entity.USER);
     List<EntityReference> children = getChildren(teamId);
     for (EntityReference child : children) {
@@ -351,7 +348,7 @@ public class TeamRepository extends EntityRepository<Team> {
     return userRecord;
   }
 
-  private Integer getUserCount(UUID teamId) throws IOException {
+  private Integer getUserCount(UUID teamId) {
     List<String> userIds = new ArrayList<>();
     List<EntityRelationshipRecord> userRecordList = getUsersRelationshipRecords(teamId);
     for (EntityRelationshipRecord userRecord : userRecordList) {
@@ -363,16 +360,16 @@ public class TeamRepository extends EntityRepository<Team> {
     return userIds.size();
   }
 
-  private List<EntityReference> getOwns(Team team) throws IOException {
+  private List<EntityReference> getOwns(Team team) {
     // Compile entities owned by the team
     return findTo(team.getId(), TEAM, Relationship.OWNS, null);
   }
 
-  private List<EntityReference> getDefaultRoles(Team team) throws IOException {
+  private List<EntityReference> getDefaultRoles(Team team) {
     return findTo(team.getId(), TEAM, Relationship.HAS, Entity.ROLE);
   }
 
-  private List<EntityReference> getParents(Team team) throws IOException {
+  private List<EntityReference> getParents(Team team) {
     List<EntityReference> parents = findFrom(team.getId(), TEAM, Relationship.PARENT_OF, TEAM);
     if (organization != null && listOrEmpty(parents).isEmpty() && !team.getId().equals(organization.getId())) {
       return new ArrayList<>(List.of(organization.getEntityReference()));
@@ -380,7 +377,7 @@ public class TeamRepository extends EntityRepository<Team> {
     return parents;
   }
 
-  private List<EntityReference> getParentsForInheritedRoles(Team team) throws IOException {
+  private List<EntityReference> getParentsForInheritedRoles(Team team) {
     // filter out any deleted teams
     List<EntityReference> parents =
         findFrom(team.getId(), TEAM, Relationship.PARENT_OF, TEAM).stream()
@@ -392,23 +389,28 @@ public class TeamRepository extends EntityRepository<Team> {
     return parents;
   }
 
-  private List<EntityReference> getChildren(UUID teamId) throws IOException {
+  @Override
+  protected List<EntityReference> getChildren(Team team) {
+    return getChildren(team.getId());
+  }
+
+  protected List<EntityReference> getChildren(UUID teamId) {
     if (teamId.equals(organization.getId())) { // For organization all the parentless teams are children
-      List<String> children = daoCollection.teamDAO().listTeamsUnderOrganization(teamId.toString());
+      List<String> children = daoCollection.teamDAO().listTeamsUnderOrganization(teamId);
       return EntityUtil.populateEntityReferencesById(EntityUtil.strToIds(children), Entity.TEAM);
     }
     return findTo(teamId, TEAM, Relationship.PARENT_OF, TEAM);
   }
 
-  private Integer getChildrenCount(Team team) throws IOException {
-    return getChildren(team.getId()).size();
+  private Integer getChildrenCount(Team team) {
+    return !nullOrEmpty(team.getChildren()) ? team.getChildren().size() : getChildren(team).size();
   }
 
-  private List<EntityReference> getPolicies(Team team) throws IOException {
+  private List<EntityReference> getPolicies(Team team) {
     return findTo(team.getId(), TEAM, Relationship.HAS, POLICY);
   }
 
-  private void populateChildren(Team team) throws IOException {
+  private void populateChildren(Team team) {
     List<EntityReference> childrenRefs = team.getChildren();
     if (childrenRefs == null) {
       return;
@@ -434,7 +436,7 @@ public class TeamRepository extends EntityRepository<Team> {
     populateTeamRefs(childrenRefs, children);
   }
 
-  private void populateParents(Team team) throws IOException {
+  private void populateParents(Team team) {
     // Teams created without parents has the top Organization as the default parent
     List<EntityReference> parentRefs = listOrEmpty(team.getParents());
 
@@ -473,7 +475,7 @@ public class TeamRepository extends EntityRepository<Team> {
     }
   }
 
-  private List<Team> getTeams(List<EntityReference> teamRefs) throws IOException {
+  private List<Team> getTeams(List<EntityReference> teamRefs) {
     List<Team> teams = new ArrayList<>();
     for (EntityReference teamRef : teamRefs) {
       try {
@@ -515,7 +517,7 @@ public class TeamRepository extends EntityRepository<Team> {
     }
   }
 
-  public void initOrganization() throws IOException {
+  public void initOrganization() {
     String json = dao.findJsonByFqn(ORGANIZATION_NAME, Include.ALL);
     if (json == null) {
       LOG.debug("Organization {} is not initialized", ORGANIZATION_NAME);
@@ -620,7 +622,7 @@ public class TeamRepository extends EntityRepository<Team> {
           continue; // Parent is being created by CSV import
         }
         // Else the parent should already exist
-        if (!SubjectCache.isInTeam(team.getName(), parentRef)) {
+        if (!SubjectContext.isInTeam(team.getName(), parentRef)) {
           importFailure(
               printer, invalidTeam(4, team.getName(), importedTeam.getName(), parentRef.getName()), csvRecord);
           processRecord = false;
@@ -635,8 +637,7 @@ public class TeamRepository extends EntityRepository<Team> {
       return String.format("#%s: Field %d error - %s", CsvErrorType.INVALID_FIELD, field + 1, error);
     }
 
-    private List<Team> listTeams(TeamRepository repository, String parentTeam, List<Team> teams, Fields fields)
-        throws IOException {
+    private List<Team> listTeams(TeamRepository repository, String parentTeam, List<Team> teams, Fields fields) {
       // Export the entire hierarchy of teams
       final ListFilter filter = new ListFilter(Include.NON_DELETED).addQueryParam("parentTeam", parentTeam);
       List<Team> list = repository.listAll(fields, filter);
@@ -664,7 +665,7 @@ public class TeamRepository extends EntityRepository<Team> {
     }
 
     @Override
-    public void entitySpecificUpdate() throws IOException {
+    public void entitySpecificUpdate() {
       if (original.getTeamType() != updated.getTeamType()) {
         // A team of type 'Group' cannot be updated
         if (GROUP.equals(original.getTeamType())) {
@@ -690,14 +691,14 @@ public class TeamRepository extends EntityRepository<Team> {
       updatePolicies(original, updated);
     }
 
-    private void updateUsers(Team origTeam, Team updatedTeam) throws JsonProcessingException {
+    private void updateUsers(Team origTeam, Team updatedTeam) {
       List<EntityReference> origUsers = listOrEmpty(origTeam.getUsers());
       List<EntityReference> updatedUsers = listOrEmpty(updatedTeam.getUsers());
       updateToRelationships(
           "users", TEAM, origTeam.getId(), Relationship.HAS, Entity.USER, origUsers, updatedUsers, false);
     }
 
-    private void updateDefaultRoles(Team origTeam, Team updatedTeam) throws JsonProcessingException {
+    private void updateDefaultRoles(Team origTeam, Team updatedTeam) {
       List<EntityReference> origDefaultRoles = listOrEmpty(origTeam.getDefaultRoles());
       List<EntityReference> updatedDefaultRoles = listOrEmpty(updatedTeam.getDefaultRoles());
       updateToRelationships(
@@ -711,21 +712,21 @@ public class TeamRepository extends EntityRepository<Team> {
           false);
     }
 
-    private void updateParents(Team original, Team updated) throws JsonProcessingException {
+    private void updateParents(Team original, Team updated) {
       List<EntityReference> origParents = listOrEmpty(original.getParents());
       List<EntityReference> updatedParents = listOrEmpty(updated.getParents());
       updateFromRelationships(
           PARENTS_FIELD, TEAM, origParents, updatedParents, Relationship.PARENT_OF, TEAM, original.getId());
     }
 
-    private void updateChildren(Team original, Team updated) throws JsonProcessingException {
+    private void updateChildren(Team original, Team updated) {
       List<EntityReference> origParents = listOrEmpty(original.getChildren());
       List<EntityReference> updatedParents = listOrEmpty(updated.getChildren());
       updateToRelationships(
           "children", TEAM, original.getId(), Relationship.PARENT_OF, TEAM, origParents, updatedParents, false);
     }
 
-    private void updatePolicies(Team original, Team updated) throws JsonProcessingException {
+    private void updatePolicies(Team original, Team updated) {
       List<EntityReference> origPolicies = listOrEmpty(original.getPolicies());
       List<EntityReference> updatedPolicies = listOrEmpty(updated.getPolicies());
       updateToRelationships(
